Add solution for Part08-Lesson02, improve read of file contents, change behavior when get from cache via soft reference